--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "linas_boutique",
   "version": "0.1.0",
+  "homepage": "https://linaboutiques.com",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
