--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.3",
     "git-pull-request": "^2.1.0",
+    "git-push": "^0.1.1",
     "lightbox-react": "^0.3.8",
     "node-polyfill-webpack-plugin": "^2.0.0",
     "react": "^18.2.0",
